# LAB4_WORKSHOP4

./: .gitignore  README.md  arquivoexcel.xlsx  pyproject.toml
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_funcional.py
